# AHPP

./: CMakeLists.txt  README.md  build.sh
data/: genseed.py
data/CiteSeer/: Attribute_U.txt  Edge.txt  Label_U.txt  stat.txt
data/Flickr/: Attribute_U.txt  Edge.txt  Label_U.txt  stat.txt
include/: algo.hpp  graph.hpp  utils.hpp
src/: abppr.cpp  algo.cpp  graph.cpp  utils.cpp
